--- a/jenkins-local/docker-compose.yaml
+++ b/jenkins-local/docker-compose.yaml
@@ -8,6 +8,10 @@ services:
     container_name: jenkins
     ports:
       - "8080:8080"
+    privileged: true
     volumes:
       - ../.:/mnt/cicd-django-demo:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
+    # INSECURE SETTING
     command: /mnt/cicd-django-demo/jenkins-local/start-jenkins.sh
