--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 Flask = "^3.0.0"
 flask-sqlalchemy = "^3.1.1"
+pip = "23.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
