--- a/jenkins-local/jenkins.yaml
+++ b/jenkins-local/jenkins.yaml
@@ -1,32 +1,27 @@
 jenkins:
   systemMessage: |
     <div style="padding: 20px; background-color: #f8d7da; border: 1px solid #f5c6cb; color: #721c24; font-weight: bold; border-radius: 5px; margin: 15px; font-size: 1.2em; text-align: center;">
-    Configured by CasC: This Jenkins installation for local development.
-    Many critical security settings have been disabled.
+    Configured by CasC: This Jenkins installation for local development. Many critical security settings have been disabled.
+    Additionally, everything is this Jenkins container should be assumed to be ephemeral, do not rely on data to survive restarts.
     </div>
   securityRealm:
     local:
       allowsSignup: false
   # INSECURE SETTING APPLIED
   authorizationStrategy: unsecured
-  disableRememberMe: true
   markupFormatter:
       rawHtml:
         disableSyntaxHighlighting: false
 
-
 jobs:
   - script: >
-      pipelineJob('cicd-demo-committed') {
+      pipelineJob('cicd-demo-local') {
+        theScript = new File('/mnt/cicd-django-demo/Jenkinsfile').getText("UTF-8")
         definition {
-          cpsScm {
-            scriptPath 'Jenkinsfile'
-            scm {
-              git {
-                remote { url '/mnt/cicd-django-demo' }
-              }
-            }
+          cps {
+            script(theScript)
+            sandbox()
           }
         }
       }
-  - file: /mnt/cicd-django-demo/jenkins-local/seedJob.groovy
+  # - file: /mnt/cicd-django-demo/jenkins-local/seedJob.groovy
