--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pylint = "^3.0.2"
 pip-audit = "^2.6.1"
 wily = "^1.25.0"
 pip-licenses = "^4.3.3"
+docker = "^6.1.3"
 
 [tool.black]
 line-length = 88
