--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pip-audit = "^2.6.1"
 wily = "^1.25.0"
 pip-licenses = "^4.3.3"
 docker = "^6.1.3"
+detect-secrets = "^1.4.0"
 
 [tool.black]
 line-length = 88
