--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cicd-django-demo"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -10,6 +10,7 @@ python = "^3.10"
 Flask = "^3.0.0"
 flask-sqlalchemy = "^3.1.1"
 pip = "23.3"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
@@ -24,6 +25,7 @@ wily = "^1.25.0"
 pip-licenses = "^4.3.3"
 docker = "^6.1.3"
 detect-secrets = "^1.4.0"
+poetry = "^1.7.1"
 
 [tool.black]
 line-length = 88
