--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Builder Docker image
       run: docker build --no-cache --target builder -t  my-image-name-builder:latest .
-    - name: Build the Docker image
+    - name: Build the Application Docker image
       run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: ClamAV Scan
-      run: docker build --build-arg base_image=my-image-name:testing -f Dockerfile-clamav.dockerfile -t my-image-name-testing-temp-clamav  .
+      run: docker build --build-arg base_image=my-image-name:latest -f Dockerfile-clamav.dockerfile -t my-image-name-testing-temp-clamav  .
+    - name: Selenium
+      run: "python --version"
