--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,11 @@ jobs:
       run: docker build --no-cache --target builder -t  my-image-name-builder:latest .
     - name: Build the Application Docker image
       run: docker build . --file Dockerfile --tag my-image-name:latest
-    - name: ClamAV Scan
-      run: docker build --build-arg base_image=my-image-name:latest -f Dockerfile-clamav.dockerfile -t my-image-name-testing-temp-clamav  .
+    # - name: ClamAV Scan
+    #   run: docker build --build-arg base_image=my-image-name:latest -f Dockerfile-clamav.dockerfile -t my-image-name-testing-temp-clamav  .
     - name: Selenium
-      run: "python --version"
+      run: |
+        python --version
+        pip install selenium docker
+        cd app/
+        python -m unittest test_selenium.py --verbose
