--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,14 +15,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Builder Docker image
-      run: docker build --no-cache --target builder -t  my-image-name-builder:latest .
+      run: docker build --no-cache --target builder -t  simple-task-app-builder:latest .
     - name: Build the Application Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:latest
+      run: docker build . --file Dockerfile --tag simple-task-app:latest
     # - name: ClamAV Scan
-    #   run: docker build --build-arg base_image=my-image-name:latest -f Dockerfile-clamav.dockerfile -t my-image-name-testing-temp-clamav  .
+    #   run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
     - name: Selenium
       run: |
         python --version
         pip install selenium docker
         cd app/
-        python -m unittest test_selenium.py --verbose
+        TAG=latest python -m unittest test_selenium.py --verbose
