--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pip-licenses = "^4.3.3"
 docker = "^6.1.3"
 detect-secrets = "^1.4.0"
 poetry = "^1.7.1"
+requests = "^2.31.0"
 
 [tool.black]
 line-length = 88
