show runs-on details

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Show runs-on Details
+      run: |
+        lscpu
+        free -h
+        df -h
     - name: Build the Builder Docker image (Unit Tests, Security Checks, Compliance, Wheels)
       run: docker build --target builder -t  simple-task-app-builder:latest .
     - name: Build the Application Docker image
