--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,15 +25,47 @@ jobs:
         free -h
         df -h
         whoami
+  
     - name: Build the Builder Docker image (Unit Tests, Security Checks, Compliance, Wheels)
-      run: docker build --target builder -t  simple-task-app-builder:latest .
+      run: docker build --target builder --tag simple-task-app-builder:latest .
+
     - name: Build the Application Docker image
-      run: docker build --target application --file Dockerfile --tag simple-task-app:latest .
+      run: docker build --target application --tag simple-task-app:latest .
+
     - name: Selenium
       run: |
         python --version
         pip install selenium docker
         cd app/
         TAG=latest python -m unittest test_selenium.py --verbose
+
     - name: ClamAV Scan
       run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: nickstanley574/simple-task-app
+    
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v2
+  
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v2
+  
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        file: docker/Dockerfile
+        platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
