--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Show runs-on Details
       run: |
+        set -x
         lscpu
         free -h
         df -h
