--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build-Test-Publish
 
 on:
   push:
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
 
-  build:
+  build-test-publish:
 
     runs-on: ubuntu-latest
 
