schedule every day a 9 AM

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule:
+    - cron: '0 14 * * *'  # This schedule runs every day at 9 AM Chicago time (14:00 UTC)
 
 
 concurrency:
