--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,33 +46,18 @@ jobs:
         cd app/
         TAG=latest python -m unittest test_selenium.py --verbose
 
-    # - name: ClamAV Scan
-    # #   run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
+    - name: ClamAV Scan Application Image
+      run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
+    
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: nickstanley574/simple-task-app
+    
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    # - name: Extract metadata (tags, labels) for Docker
-    #   id: meta
-    #   uses: docker/metadata-action@v4
-    #   with:
-    #     images: nickstanley574/simple-task-app
-    
-    # # - name: Set up QEMU
-    # #   uses: docker/setup-qemu-action@v2
-  
-    # # - name: Set up Docker Buildx
-    # #   uses: docker/setup-buildx-action@v2
-  
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@v3
-    #   with:
-    #     context: .
-    #     file: docker/Dockerfile
-    #     platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
-    #     push: true
-    #     tags: ${{ steps.meta.outputs.tags }}
-    #     labels: ${{ steps.meta.outputs.labels }}
+    - name: Push Docker Images
+      run: |
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest
