--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,19 +35,19 @@ jobs:
       run: docker buildx build --target builder -t  simple-task-app-builder:latest .
 
     - name: Build the Application Docker image
-      run: docker buildx build --target application --tag simple-task-app:latest .
+      run: docker buildx build --target application --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest .
 
     - name: Docker images
       run: docker image ls -a
 
-    - name: Selenium
-      run: |
-        pip install selenium docker
-        cd app/
-        TAG=latest python -m unittest test_selenium.py --verbose
+    # - name: Selenium
+    #   run: |
+    #     pip install selenium docker
+    #     cd app/
+    #     TAG=latest python -m unittest test_selenium.py --verbose
 
-    - name: ClamAV Scan Application Image
-      run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
+    # - name: ClamAV Scan Application Image
+    #   run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
     
     - name: Extract metadata (tags, labels) for Docker
       id: meta
