--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,12 +75,14 @@ jobs:
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: healthchecks/healthchecks
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app
     
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
+  
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v3
       with:
