--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Show runs-on Details
+    - name: "Display runs-on Details and Install Build Dependencies"
       run: |
         set -x
         lscpu
@@ -30,39 +30,48 @@ jobs:
         docker version
         python --version
         whoami
+        pip install selenium docker
+
 
     - name: Set outputs
       id: vars
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
   
     - name: Build the Builder Docker image (Unit Tests, Security Checks, Compliance, Wheels)
-      run: docker buildx build --target builder -t simple-task-app-builder:latest .
+      run: |
+        docker buildx build \
+        --target builder \
+        --tag simple-task-app-builder:latest \
+        .
 
     - name: Build the Application Docker image
       run: |
         docker buildx build \
         --target application \
-        --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }} \
+        --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest \
+        --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }} \
         .
 
     - name: Docker images
       run: docker image ls -a
 
-    # - name: Selenium
-    #   run: |
-    #     pip install selenium docker
-    #     cd app/
-    #     TAG=latest python -m unittest test_selenium.py --verbose
+    - name: Selenium
+      run: |
+        cd app/
+        TAG=latest python -m unittest test_selenium.py --verbose
 
-    # - name: ClamAV Scan Application Image
-    #   run: docker build --build-arg base_image=simple-task-app:latest -f Dockerfile-clamav.dockerfile -t simple-task-app-testing-temp-clamav  .
+    - name: ClamAV Scan Application Image
+      run: |
+        docker build \
+        --build-arg base_image=simple-task-app:latest \
+        --file Dockerfile-clamav.dockerfile \
+        --tag simple-task-app-testing-temp-clamav \
+        .
     
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
     - name: Push Docker Images
       run: |
-        git_short_sha=$(git rev-parse --short HEAD)
-        
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }}
