--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       id: vars
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
   
-    - name: Build the Builder Docker image (Unit Tests, Security Checks, Compliance, Wheels)
+    - name: Build App Builder Docker image (Unit Tests, Security Checks, Compliance, Wheels)
       run: |
         docker buildx build \
         --target builder \
@@ -52,13 +52,10 @@ jobs:
         --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }} \
         .
 
-    - name: Docker images
-      run: docker image ls -a
-
-    - name: Selenium
-      run: |
-        cd app/
-        TAG=latest python -m unittest test_selenium.py --verbose
+    # - name: Selenium
+    #   run: |
+    #     cd app/
+    #     TAG=latest python -m unittest test_selenium.py --verbose
 
     - name: ClamAV Scan Application Image
       run: |
