--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,9 @@ jobs:
       run: |
         docker build \
         --build-arg base_image=${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest \
+        --rm \
         --file Dockerfile-clamav.dockerfile \
-        --tag simple-task-app-testing-temp-clamav \
+        --tag clamav-${{ steps.vars.outputs.sha_short }} \
         .
     
     - name: Log in to Docker Hub
