use var vs secret for DOCKERHUB_USERNAME

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,6 @@ jobs:
         whoami
         pip install selenium docker
 
-
     - name: Set outputs
       id: vars
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
@@ -48,28 +47,28 @@ jobs:
       run: |
         docker buildx build \
         --target application \
-        --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest \
-        --tag ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }} \
+        --tag ${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:latest \
+        --tag ${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }} \
         .
 
     - name: Selenium
       run: |
         cd app/
-        IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest python -m unittest test_selenium.py --verbose
+        IMAGE=${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:latest python -m unittest test_selenium.py --verbose
 
     - name: ClamAV Scan Application Image
       run: |
         docker build \
-        --build-arg base_image=${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest \
+        --build-arg base_image=${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:latest \
         --rm \
         --file Dockerfile-clamav.dockerfile \
         --tag clamav-${{ steps.vars.outputs.sha_short }} \
         .
     
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ vars.DOCKERHUB_USERNAME }}" --password-stdin
 
     - name: Push Docker Images
       run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }}
+        docker push ${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:latest
+        docker push ${{ vars.DOCKERHUB_USERNAME }}/simple-task-app:${{ steps.vars.outputs.sha_short }}
